# ComputerGraphics

./: .gitignore  README.md
2dTransformations/Rotation/: app.js  index.html
2dTransformations/Scaling/: app.js  index.html
2dTransformations/Translation/: app.js  index.html
Canvas2D/2dAdventure/: index.html
Canvas2D/Examples/CarAndArc_2D_Context/: CarDemo.html  Raw.html  car.js
Canvas2D/Examples/MainClass_2DContext/: CanvasDemo.html  myCss.css
Canvas2D/LuckyNumber/: index.html
Canvas2D/SlotMachine/: index.html
htmlTutorial/: introH.html
javaScriptTutorial/: basicScript.js  index.html
opengl/: CMakeLists.txt
opengl/include/glad/: glad.h
opengl/learnOpenGL/: CMakeLists.txt
opengl/learnOpenGL/include/: mesh.h  model.h
opengl/learnOpenGL/include/shader/: shader_s.h
opengl/learnOpenGL/resources/objects/e11/: license.txt  scene.gltf
opengl/learnOpenGL/resources/objects/italian_m1542_ww2_tank/: license.txt  scene.gltf
opengl/learnOpenGL/resources/objects/low_poly_tank/: license.txt  scene.gltf
opengl/learnOpenGL/src/1-gettingStarted/1-1-setup/: CMakeLists.txt  main.cpp
opengl/learnOpenGL/src/1-gettingStarted/2-1-Triangle/: main.cpp
opengl/learnOpenGL/src/1-gettingStarted/3-1-shaderClass/: CMakeLists.txt
opengl/learnOpenGL/src/1-gettingStarted/3-2-shaderInterpolation/: main.cpp
opengl/learnOpenGL/src/1-gettingStarted/4-1-Textures/: CMakeLists.txt
opengl/learnOpenGL/src/1-gettingStarted/5-1-Transformations/: CMakeLists.txt  main.cpp
opengl/learnOpenGL/src/1-gettingStarted/6-1-CoordinateSystems/: CMakeLists.txt  main.cpp
opengl/learnOpenGL/src/1-gettingStarted/6-3-CoordinateSystemsMultiple/: CMakeLists.txt  main.cpp
opengl/learnOpenGL/src/1-gettingStarted/7-1-CameraCircle/: CMakeLists.txt  main.cpp
opengl/learnOpenGL/src/1-gettingStarted/7-2-CameraMovementDT/: CMakeLists.txt  main.cpp
opengl/learnOpenGL/src/1-gettingStarted/7-3-CameraMouseZoom/: CMakeLists.txt  camera.fs  camera.vs  main.cpp
opengl/learnOpenGL/src/1-gettingStarted/7-4-CameraClass/: CMakeLists.txt  main.cpp
opengl/learnOpenGL/src/2-lighting/1-Colors/: CMakeLists.txt  main.cpp
opengl/learnOpenGL/src/2-lighting/2-2-PhongLighting/: CMakeLists.txt  basicLighting.fs  basicLighting.vs  gouraudShading.fs  gouraudShading.vs  main.cpp
opengl/learnOpenGL/src/2-lighting/3-1-Materials/: CMakeLists.txt  lightCube.fs  main.cpp  materials.fs  materials.vs
opengl/learnOpenGL/src/2-lighting/4-2-LightingMaps/: CMakeLists.txt  lightCube.fs  lightCube.vs  lightingMaps.fs  lightingMaps.vs  main.cpp
opengl/learnOpenGL/src/2-lighting/4-4-LightEmissions/: CMakeLists.txt  lightingMaps.fs  main.cpp
opengl/learnOpenGL/src/2-lighting/5-1-LightCastersDirectional/: CMakeLists.txt  lightCasters.fs  lightCasters.vs  main.cpp
opengl/learnOpenGL/src/2-lighting/5-2-LightCastersPoint/: CMakeLists.txt  lightCasters.fs  lightCasters.vs  main.cpp
opengl/learnOpenGL/src/2-lighting/5-3-LightCastersSpotlight/: CMakeLists.txt  lightCasters.fs  lightCasters.vs  main.cpp
opengl/learnOpenGL/src/2-lighting/6-1-MultipleLights/: CMakeLists.txt  main.cpp  multipleLights.fs
opengl/learnOpenGL/src/3-modelLoading/1-modelLoading/: CMakeLists.txt  main.cpp  modelLoading.fs  modelLoading.vs
opengl/learnOpenGL/src/4-advancedOpenGL/1-2-depthTestingView/: CMakeLists.txt  depthTesting.fs  depthTesting.vs  main.cpp
opengl/projects/hommingMissile/: CMakeLists.txt
opengl/projects/hommingMissile/include/: Missile.h  spotlight.h
opengl/projects/hommingMissile/src/: Missile.cpp  glad.c  main.cpp  missile.fs  missile.vs
opengl/projects/lightingCanvas/: CMakeLists.txt
opengl/projects/lightingCanvas/include/: cube.h  spotlight.h
opengl/projects/lightingCanvas/src/: cube.cpp  main.cpp  spotlight.fs  spotlight.vs
opengl/projects/perspectivePyramids/: CMakeLists.txt
opengl/projects/perspectivePyramids/include/: camera.h  pyramid.h
opengl/projects/perspectivePyramids/src/: main.cpp  perspective.fs  pyramid.cpp  pyramid.fs  pyramid.vs
opengl/projects/pyramid/: CMakeLists.txt
opengl/projects/pyramid/include/: pyramid.h
opengl/projects/pyramid/src/: main.cpp  pyramid.cpp  pyramid.vs
opengl/setup/: CMakeLists.txt
opengl/setup/src/: main.cpp
opengl/shaderClass/: CMakeLists.txt
opengl/shaderClass/src/: main.cpp
opengl/shadersInterpolation/: CMakeLists.txt
opengl/src/1-gettingStarted/2-1-Triangle/: CMakeLists.txt
opengl/src/1-gettingStarted/2-2-TriangleIndexed/: CMakeLists.txt  main.cpp
opengl/src/1-gettingStarted/3-1-shaderClass/: main.cpp  shader.vs
opengl/src/1-gettingStarted/3-2-shaderInterpolation/: CMakeLists.txt
opengl/src/1-gettingStarted/4-1-Textures/: main.cpp  texture.fs
opengl/src/1-gettingStarted/4-2-TexturesCombined/: CMakeLists.txt  main.cpp
opengl/textures/: CMakeLists.txt
opengl/textures/src/: main.cpp
opengl/textures/src/shaders/: texture.fs
opengl/triangle/: CMakeLists.txt
opengl/triangle/src/: main.cpp
opengl/triangleIndexed/: CMakeLists.txt
webgl/Cube/: index.html
webgl/EscapeTheMaze/: BasicGameObject.js  SimpleTextures.html  index.html  webgl_interface.js
webgl/GameEngine/: BasicGameObject.js  GameEngineCore.html  index.html  webgl_interface.js
webgl/IndigoCS/SimpleTriangle/: app.js  index.html
webgl/Paint/: index.html  input++.html
webgl/PlacementLab/: Shape.js  index.html  index2.html
webgl/PrimitiveGameEngine/: BasicGameObjectNoFill.js  GameEngineCoreNoFill.html  index.html  webgl_interface.js
webgl/Rectangles/: app.js  index.html
webgl/SpookyForest/: BasicGameObject.js  LightingExample.html  LightingExample2.html  index.html  webgl_interface.js
webgl/TriangleTrouble/: index.html
webgl/webGLIntitials/: index.html
